--- a/app/templates/partials/sidebar-nav.html
+++ b/app/templates/partials/sidebar-nav.html
@@ -26,7 +26,13 @@
             </a>
             <ul id="ddmenu_1" class="collapse show dropdown-nav">
               <li>
-                <a href="/" class="active"> Analysis Data </a>
+                <a href="/"><i class="lni lni-layers"></i> Overview </a>
+              </li>
+              <li>
+                <a href="/charts"> <i class="lni lni-stats-up"></i> Charts </a>
+              </li>
+               <li>
+                <a href="/tables"><i class="lni lni-grid-alt"></i> Tables </a>
               </li>
             </ul>
           </li>
@@ -59,7 +65,7 @@
             </a>
             <ul id="ddmenu_4" class="collapse dropdown-nav">
               <li>
-                <a href="/admin/user-manage"> User Manage </a>
+                <a href="/admin/user-manage/"><i class="lni lni-users"></i> User Manage </a>
               </li>
             </ul>
           </li>
