--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,10 +23,17 @@
   <script src="{{ url_for('static', filename='vendor/bootstrap/bootstrap.js') }}"></script>
   <script src="{{ url_for('static', filename='vendor/fontawesome/js/all.js') }}"></script>
   <script src="{{ url_for('static', filename='vendor/jquery/jquery.js') }}"></script>
+  <script src="{{ url_for('static', filename='vendor/pagination/pagination.min.js') }}"></script>
   <script src="{{ url_for('static', filename='vendor/chart/Chart.min.js') }}"></script>
   <script src="{{ url_for('static', filename='vendor/fullcalendar/fullcalendar.js') }}"></script>
   <script src="{{ url_for('static', filename='vendor/sweetalert2/sweetalert2.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+  <script type="text/javascript">
+    const currentPathName = window.location.pathname;
+    console.log(currentPathName)
+    const a = $(`a[href="${currentPathName}"]`)
+    a.addClass('active')
+  </script>
   {% block script %} {% endblock %} 
 </body>
 </html>
