--- a/app/templates/partials/header.html
+++ b/app/templates/partials/header.html
@@ -32,10 +32,10 @@
                   >
                     <div class="profile-info">
                       <div class="info">
-                        <h6>{{ username or 'John Doe'}}</h6>
+                        <h6></h6>
                         <div class="image">
                           <img
-                            src="{{ url_for('static', filename='images/profile/profile-image.png') }}"
+                            src=""
                             alt=""
                           />
                           <span class="status"></span>
