--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -50,11 +50,11 @@
         {% include 'analysis/total.html' %}
         <!-- End Row -->
         <div class="row">
-          <div class="col-lg-7">
+          <div class="col-lg-12">
             <div class="card-style mb-30">
               <div class="title d-flex flex-wrap justify-content-between">
                 <div class="left">
-                  <h6 class="text-medium mb-10">Tổng số lượng item được dự đoán trong tháng 12/2022</h6>
+                  <h6 class="text-medium mb-10">Total number of items predicted for 12/2022</h6>
                   <h3 class="text-bold">{{ totalItemInHo }} items</h3>
                 </div>
                 <div class="right">
@@ -81,186 +81,10 @@
             </div>
           </div>
           <!-- End Col -->
-          <div class="col-lg-5">
-            <div class="card-style mb-30">
-              <div
-                class="
-                  title
-                  d-flex
-                  flex-wrap
-                  align-items-center
-                  justify-content-between
-                "
-              >
-                <div class="left">
-                  <h6 class="text-medium mb-30">Tổng số lượng item được dự đoán trong tháng 12/2022</h6>
-                </div>
-                <div class="right">
-                  <div class="select-style-1">
-                    <div class="select-position select-sm">
-                      <select class="light-bg">
-                        <option value="">Yearly</option>
-                        <option value="">Monthly</option>
-                        <option value="">Weekly</option>
-                      </select>
-                    </div>
-                  </div>
-                  <!-- end select -->
-                </div>
-              </div>
-              <!-- End Title -->
-              <div class="chart">
-                <canvas
-                  id="Chart2"
-                  style="width: 100%; height: 400px"
-                ></canvas>
-              </div>
-              <!-- End Chart -->
-            </div>
-          </div>
-          <!-- End Col -->
         </div>
         <!-- End Row -->
         <div class="row">
-         <div class="col-lg-5">
-            <div class="card-style calendar-card mb-30">
-              <div id="calendar-mini"></div>
-            </div>
-          </div> 
-          <!-- End Col -->
-          <div class="col-lg-7">
-            <div class="card-style mb-30">
-              <div
-                class="
-                  title
-                  d-flex
-                  flex-wrap
-                  justify-content-between
-                  align-items-center
-                "
-              >
-                <div class="left">
-                  <h6 class="text-medium mb-30">Top Status OK</h6>
-                </div>
-                <div class="right">
-                  <div class="select-style-1">
-                    <div class="select-position select-sm">
-                      <select class="light-bg">
-                        <option value="">Yearly</option>
-                        <option value="">Monthly</option>
-                        <option value="">Weekly</option>
-                      </select>
-                    </div>
-                  </div>
-                  <!-- end select -->
-                </div>
-              </div>
-              <!-- End Title -->
-              <div class="table-responsive">
-                <table class="table top-selling-table">
-                  <thead>
-                    <tr>
-                      <th></th>
-                      <th>
-                        <h6 class="text-sm text-medium">HO Item</h6>
-                      </th>
-                      <th class="min-width">
-                        <h6 class="text-sm text-medium">Status OK</h6>
-                      </th>
-                      <th class="min-width">
-                        <h6 class="text-sm text-medium">Date created</h6>
-                      </th>
-                      <th></th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                  </tbody>
-                </table>
-                <!-- End Table -->
-              </div>
-            </div>
-          </div>
-          <!-- End Col -->
-        </div>
-        <!-- End Row -->
-        <div class="row">
-          <div class="col-lg-5">
-            <div class="card-style mb-30">
-              <div
-                class="
-                  title
-                  d-flex
-                  flex-wrap
-                  align-items-center
-                  justify-content-between
-                "
-              >
-                <div class="left">
-                  <h6 class="text-medium mb-2">Sales Forecast</h6>
-                </div>
-                <div class="right">
-                  <div class="select-style-1 mb-2">
-                    <div class="select-position select-sm">
-                      <select class="light-bg">
-                        <option value="">Last Month</option>
-                        <option value="">Last 3 Months</option>
-                        <option value="">Last Year</option>
-                      </select>
-                    </div>
-                  </div>
-                  <!-- end select -->
-                </div>
-              </div>
-              <!-- End Title -->
-              <div class="chart">
-                <div id="legend3">
-                  <ul
-                    class="legend3 d-flex flex-wrap align-items-center mb-30"
-                  >
-                    <li>
-                      <div class="d-flex">
-                        <span class="bg-color primary-bg"> </span>
-                        <div class="text">
-                          <p class="text-sm text-success">
-                            <span class="text-dark">Revenue</span> +25.55%
-                            <i class="lni lni-arrow-up"></i>
-                          </p>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="d-flex">
-                        <span class="bg-color purple-bg"></span>
-                        <div class="text">
-                          <p class="text-sm text-success">
-                            <span class="text-dark">Net Profit</span> +45.55%
-                            <i class="lni lni-arrow-up"></i>
-                          </p>
-                        </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="d-flex">
-                        <span class="bg-color orange-bg"></span>
-                        <div class="text">
-                          <p class="text-sm text-danger">
-                            <span class="text-dark">Order</span> -4.2%
-                            <i class="lni lni-arrow-down"></i>
-                          </p>
-                        </div>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-                <canvas
-                  id="Chart3"
-                  style="width: 100%; height: 450px"
-                ></canvas>
-              </div>
-            </div>
-          </div>
-          <!-- End Col -->
-          <div class="col-lg-7">
+          <div class="col-lg-12">
             <div class="card-style mb-30">
               <div
                 class="
