--- a/app/templates/tables.html
+++ b/app/templates/tables.html
@@ -351,7 +351,7 @@ content %}
       const _that = this;
       try {
         const result = await $.ajax({
-          url: "http://localhost:50000/data",
+          url: `${window.location.origin}/data`,
           type: "GET",
           data: data,
         });
