update forgot password

--- a/app/templates/resetpassword.html
+++ b/app/templates/resetpassword.html
@@ -70,7 +70,7 @@
                         </div>  
                         <input type="hidden" id="verify_otp" name="verify_otp" value="{{check or 'false'}}" />
                         <input type="hidden" id="sent_otp" name="sent_otp" value="{{check_sentOTP or 'false'}}" />
-                        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" integrity="sha384-/Wx1NuqlgALfa1Do1U6Mer7quEDHOo8REf/0izoIrV8Y3Z/gtEHQc01STCEMM1LZ" crossorigin="anonymous"></script>                   
+                        {% block script %}              
                           <script>                    
                             var OTP = document.getElementById("OTP");
                             var new_password = document.getElementById("new_password");
@@ -165,6 +165,7 @@
                               return regex.test(password);
                             }
                           </script>
+                        {% endblock %}
                       </div>
 
 
